	+ Components can be subModels of the HasMany type
	+ Added EBox::Types::Text::WriteOnce type
	+ Do not use rows(), use row to force iteration over the rows and increase
	performance and reduce memory use.
	+ Do not suggest_sync after read operations in gconf
	+ Increase MaxRequestsPerChild to 200 in eBox's apache
	+ Make apache spawn only one child process
0.12.103
	+ Bugfix: fix SQL statement to fetch last rows to consolidate
0.12.102
	+ Bugfix: consolidate logs using the last date and not starting from scratch 
0.12.101
	+ Bugfix: DomainName type make comparisons case insensitive
	according to RFC 1035
0.12.100
	+ EBox::Module::writeConfFile and EBox::Service scape file's path
	+ Bugfix. Configure logrotate to actually rotate ebox logs
	+ Fixed bug in ForcePurge logs model
	+ Fixed bug in DataTable: ModelManaged was called with tableName
	instead of context Name
	+ Fixing an `img` tag closed now properly and adding alternative
	text to match W3C validation in head title
	+ Backup pages now includes the size of the archive
	+ Fixed bug in ForcePurge logs model
	+ Now the modules can have more than one tableInfo for logging information
	+ Improve model debugging 
	+ Improve restart debugging
	+ Backups and bug reports can be made from the command line
	+ Bugfix: `isEqualTo` is working now for `Boolean` types
	+ Bugfix: check if we must disable file modification checks in
	Manager::skipModification

0.12.99
	+ Add support for reporting
	+ Refresh logs automatically
	+ Reverse log order
	+ Remove temp file after it is downloaded with FromTempDir controller
0.12.3
	+ Bug fix: use the new API in purge method. Now purging logs is working
	again.
0.12.2
	+ Increase random string length used to generate the cookie to
	2048 bits
	+ Logs are show in inverse chronological order
0.12.1
	+ Bug fix: use unsafeParam for progress indicator or some i18 strings
	will fail when saving changes
0.12
	+ Bugfix: Don't assume timecol is 'timestamp' but defined by